navbar dropdown menu and collapse toggler icon fixed.

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .navbar-nav .dropdown-menu {
-  color: black;
+  color: black !important;
 }
 
 .navbar-dark .navbar-nav .active > .nav-link {
@@ -49,10 +49,13 @@ body {
 }
 
 @media (max-width: 765px) {
+  .navbar-dark .navbar-nav .nav-link:hover {
+    border-bottom: none !important;
+  }
   .navbar-nav .dropdown-menu {
     text-align: center;
-    background-color: transparent;
-
+    background-color: rgba(0, 0, 0, 0.7);
+    font-size: 12px;
     border: 0.5px solid white;
   }
   .navbar-nav .dropdown-menu .dropdown-item {
@@ -71,13 +74,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 50px;
   color: white;
 }
 
 .section_welcome h1 {
-  margin-top: 30px;
   color: #f1ae2b;
-  font-size: 100px;
+  font-size: 90px;
   letter-spacing: 10px;
   font-weight: 700;
 }
@@ -90,7 +93,7 @@ body {
 
 @media (max-width: 600px) {
   .section_welcome h1 {
-    font-size: 55px;
+    font-size: 40px;
   }
 }
 .welcome_bg {
